# APP-backup

projects/ChatQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  privatechatdialog.cpp  privatechatdialog.h
projects/chat-server/: package-lock.json  package.json  tsconfig.json
projects/chat-server/src/: app.module.ts  main.ts
projects/chat-server/src/chat/: chat.gateway.ts  chat.module.ts  redis.provider.ts
projects/chat-server/src/mail/: mail.controller.ts  mail.entity.ts  mail.module.ts  mail.service.ts
projects/chat-web/: index.html  package-lock.json  package.json
projects/chat-web/src/: App.vue  main.ts
projects/chat-web/src/components/: MailBox.vue
projects/chat-web/src/stores/: chat.ts
